--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -32,7 +32,7 @@ html {
 	--accent: rgb(232, 144, 100);
 
 	--cube-color: rgb(227 120 66 / .6);
-	--cube-line: rgb(211 182 165 / 70%);;
+	--cube-line: rgb(211 182 165 / 70%);
 
 	--landing-text: rgb(10 5 5);
 
@@ -57,7 +57,7 @@ html {
 
 		--landing-text: #f4f4f4;
 
-		--cube-color: rgb(126 175 199 / 60%);;
+		--cube-color: rgb(126 175 199 / 60%);
 		--cube-line: rgb(191 215 227/.7);
 
 		background-color: #f4f4f4;;
