--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
    License: none (public domain)
 */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lusitana:wght@700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -476,13 +476,13 @@ html {
   }
 }
 .logo {
-  font-family: "Didact Gothic", sans-serif;
+  font-family: "Manrope", sans-serif;
   padding: var(--simple-space) var(--simple-small-space);
   font-size: clamp(1.3rem, 2vw, 1.5rem);
   line-height: 1;
-  font-weight: 900;
-  text-shadow: 2px 2px 0 var(--fade);
-  z-index: 200;
+  font-weight: 800;
+  text-shadow: 0px 1px 1px var(--fade);
+  z-index: 100;
   background-color: transparent;
 }
 
@@ -892,16 +892,20 @@ footer .page-links li:first-of-type {
   position: relative;
 }
 
-.site-header ul svg {
+.site-header ul .svg-box {
   max-width: 50px;
   position: absolute;
-  z-index: -2;
+  z-index: -10;
   margin-left: auto;
   margin-right: auto;
   top: 2px;
-  left: 10px;
+  left: 2px;
   bottom: 0;
   right: 0;
+  background-color: transparent;
+}
+
+.site-header ul svg {
   -webkit-animation: rotateAnimation 3s linear infinite;
           animation: rotateAnimation 3s linear infinite;
 }
