--- a/templates/modules/site-menu/_style.scss
+++ b/templates/modules/site-menu/_style.scss
@@ -17,17 +17,22 @@
 }
 
 
-.site-header ul svg {
+.site-header ul .svg-box {
 	max-width: 50px;
 	position: absolute;
-	z-index: -2;
+	z-index: -10;
 	margin-left: auto;
 	margin-right: auto;
 	top: 2px;
-	left: 10px;
+	left: 2px;
 	bottom: 0;
 	right: 0;
 
+	background-color: transparent;
+
+}
+
+.site-header ul svg{
 	animation: rotateAnimation 3s linear infinite;
 }
 
